[package]
name = "xxh3_hashid_macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "XXH3 hashed identifier literals"
documentation = "https://docs.rs/xxh3_hashid_macro"
authors = ["elimerl"]
homepage = "https://github.com/elimerl/xxh3_hashid_macro"
repository = "https://github.com/elimerl/xxh3_hashid_macro"

[lib]
proc-macro = true

[dependencies]
litrs = "0.4.1"
xxh3 = "0.1.1"
